# ucug1808-gendered-gym-space

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
data/: 359098880_按序号_校园健身房空间环境、社交媒体审美与女性力量训练参与问卷_34_34.xlsx  采访对象_1_QA.md  采访对象_2.txt  采访对象_2_QA.md  采访对象_3.txt  采访对象_3_QA.md  问卷原始数据.xlsx
data/processed/: interview_coded.csv  interview_qa.csv  interview_representative_quotes.csv  interview_theme_summary.csv  survey_construct_summary.csv  survey_group_comparisons.csv  survey_options.csv  survey_participant_scale_summary.csv  survey_participant_scores.csv  survey_questions.csv  survey_reliability.csv  survey_slider_agreement.csv  survey_slider_items.csv  survey_spearman_correlations.csv  survey_spearman_matrix.csv  问卷数据_文本版.xlsx
notebooks/: 01_data_overview.ipynb  02_scale_analysis.ipynb  03_descriptive_statistics.ipynb  04_inferential_analysis.ipynb  05_qualitative_analysis.ipynb  06_participant_level_analysis.ipynb
proposal/reference/: proposal_references.bib
report/: build.bat  build.sh  main.tex  references.bib
report/sections/: 01_introduction.tex  02_literature_review.tex  03_methodology.tex  04_results.tex  05_discussion.tex  06_conclusion.tex
scripts/: build_notebooks.py  merge_slider_freq.py  pdf_to_md.py  run_analysis.py
slides/: README.md  presentation_outline.md  speaker_script_bilingual.md
slides/final/: ucug1808_campus_gym_resistance_training.pptx
src/: analysis.py  data_loader.py  participant_analysis.py  preprocessing.py  qualitative_analysis.py  visualization.py
